--- a/day_2_include_css/form_modified.html
+++ b/day_2_include_css/form_modified.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <link rel="stylesheet" href="css/form2.css">
+    <link rel="stylesheet" href="css/form_modified.css">
 
 </head>
 <body>
